# actix-web-todo

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  todo.db
src/: main.rs
src/adapter/: todo_controller.rs
src/adapter/controller/: todo_controller.rs
src/adapter/gateway/: todo_repository.rs
src/domain/: mod.rs
src/infrastructure/: mod.rs  sqlite.rs
src/util/: error.rs  mod.rs
